Fix truvvl iframe on mobile

--- a/src/app/assets/stylesheets/markdown.scss
+++ b/src/app/assets/stylesheets/markdown.scss
@@ -109,6 +109,10 @@
     max-height: 75vw;
   }
 
+  iframe.truvvl-iframe {
+    max-height: initial;
+  }
+
   .tweetWrapper iframe {
       max-height: inherit;
   }
